--- a/alonePerson/main.css
+++ b/alonePerson/main.css
@@ -10,7 +10,6 @@ body {
 .man{
     width: 7em;
     height: 33em;
-    border: 1px dashed black;
     color: white;
     font-size: 10px;
     position: relative;
@@ -45,6 +44,9 @@ body {
     left: -1.6em;
     animation: feet-animation 2s ease-in-out infinite;
 }
+.feet::after {
+    animation-delay: 1s;
+}
 
 @keyframes feet-animation {
     20% {
@@ -55,4 +57,51 @@ body {
         transform: translateX(4.6em) translateY(-1em) rotate(0deg);
     }
 
+    40% {
+        transform: translateX(5.6em) translateY(-0.6em) rotate(4deg);
+    }
+
+    44% {
+        transform: translateX(5.6em) translateY(0) rotate(0deg);
+    }
+}
+
+.man::before{
+    content: '';
+    position: absolute;
+    width: 12em;
+    height: 0.8em;
+    background-color: rgba(0,0,0,0.1);
+    bottom: -0.2em;
+    border-radius: 50%;
+    left: -3em;
+}
+.head,
+.body{
+    animation: body-animation 4s ease-in-out infinite;
+}
+@keyframes body-animation {
+    0%,100%{
+        transform: translateY(0) skewX(-2deg);
+    }
+    25%,75%{
+        transform: translateY(0.5em) skewX(0deg);
+    }
+    50%{
+        transform: translateY(0) skewX(0deg);
+    }
+}
+
+.man::before {
+    animation: shadow-animate 4s ease-in-out infinite;
+}
+
+@keyframes shadow-animate {
+    0%, 50%, 100% {
+        transform: scale(1);
+    }
+
+    25%, 75% {
+        transform: scale(1.15);
+    }
 }
