--- a/#03_smileyCat/main.css
+++ b/#03_smileyCat/main.css
@@ -1,31 +1,34 @@
-body{
+body {
     margin: 0;
     height: 100vh;
     display: flex;
-    align-items: center;
     justify-content: center;
 }
-.container{
-    width:35em;
+
+.container {
+    width: 35em;
     height: 35em;
     border: 1px dashed black;
-    background-color: #F6F7A7;
+    background-color: #f3f3f3;
     position: relative;
 
 }
-.cat{
+
+.cat {
     width: 400px;
     height: 340px;
     position: absolute;
 
-    top:50%;
-    left:50%;
-    transform: translate(-50%,-50%)
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%)
 }
-.cat >*{
+
+.cat > * {
     box-sizing: border-box;
 }
-.head{
+
+.head {
     width: 100%;
     height: 100%;
     border: 2px solid #2e2e2e;
@@ -35,7 +38,8 @@ body{
     z-index: 100;
     overflow: hidden;
 }
-.ear::before{
+
+.ear::before {
     content: '';
     position: absolute;
     width: 160px;
@@ -44,27 +48,29 @@ body{
     background-color: #f3f3f3;
     border-radius: 4% 80% 0 50%;
     left: -20px;
-    top:0;
+    top: 0;
     transform: rotate(-15deg);
-    transition: transform 1s,left 1s;
-
+    transition: transform 1s, left 1s;
 
 }
-.ear::after{
+
+.ear::after {
     content: '';
     position: absolute;
     width: 160px;
     height: 200px;
     border: 2px solid #2e2e2e;
     background-color: #f3f3f3;
-    border-radius:  80% 4% 50% 0;
-    top:0;
+    border-radius: 80% 4% 50% 0;
+    top: 0;
     right: -20px;
     transform: rotate(15deg);
-    transition: transform 1s,right 1s;
+    transition: transform 1s, right 1s;
 
 }
-.pattern{
+
+/*头顶花纹*/
+.pattern {
     width: 180px;
     height: 160px;
     position: absolute;
@@ -73,14 +79,16 @@ body{
     border-radius: 0 0 50% 50%;
     overflow: hidden;
 }
-.pattern::before{
+
+.pattern::before {
     content: '';
     position: absolute;
     width: 50%;
     height: 100%;
     background-color: #F0AC6B;
 }
-.pattern::after{
+
+.pattern::after {
     content: '';
     position: absolute;
     width: 50%;
@@ -90,36 +98,44 @@ body{
 }
 
 /*眼睛容器*/
-.eyes{
+.eyes {
     width: 300px;
     height: 60px;
     position: absolute;
-    top:180px;
-    left:50%;
+    top: 180px;
+    left: 50%;
     transform: translateX(-50%);
     overflow: hidden;
 }
 
-.eye:first-child{
+.eye:first-child {
     position: absolute;
-    left:0;
+    left: 0;
 }
-.eye:last-child{
+
+.eye:last-child {
     position: absolute;
-    right:0;
+    right: 0;
 }
 
 /*眼睛*/
-.eye-socket{
+.eye-socket {
     width: 100px;
     height: 100px;
     border: 2px solid #2e2e2e;
     border-radius: 50% 50% 50% 50%;
     overflow: hidden;
 }
+.eye-socket > div:first-child {
+    height: 100px;
+    width: 30px;
+    background-color: #2e2e2e;
+    margin-left: 35px;
+    transition:all 1s;
+}
 
 /*下眼线*/
-.eyeliner{
+.eyeliner {
     height: 100px;
     width: 180px;
     border-top: 2px solid #2e2e2e;
@@ -128,22 +144,162 @@ body{
     margin-left: -40px;
     background: #F6F7F2;
     border-radius: 50%;
+    transition: margin-top 1s;
 }
 
-/*瞳孔*/
-.eye-socket::before{
-    content: '';
+/*胡子*/
+.beard {
+    height: 80px;
+    width: 380px;
     position: absolute;
-    width: 30px;
-    height: 100%;
-    background-color: black;
-    left:50%;
+    top: 170px;
+    z-index: 20;
+    left: 50%;
     transform: translateX(-50%);
-    overflow: hidden;
+}
+
+.beard-left > div:first-child {
+    width: 30px;
+    height: 10px;
+    border-top: 6px #E53941 solid;
+    border-radius: 30% 80% 20% 50%;
+    transform: rotate(25deg);
+    -ms-transform: rotate(25deg);
+    -moz-transform: rotate(25deg);
+    -webkit-transform: rotate(25deg);
+    -o-transform: rotate(25deg);
+    margin-left: 20px;
+}
+
+.beard-left > div:nth-child(2) {
+    width: 20px;
+    height: 6px;
+    background-color: #E53941;
+    border-radius: 50%;
+    transform: rotate(25deg);
+    -ms-transform: rotate(25deg);
+    -moz-transform: rotate(25deg);
+    -webkit-transform: rotate(25deg);
+    -o-transform: rotate(25deg);
+    margin-left: 20px;
+}
+
+.beard-left > div:nth-child(3) {
+    width: 32px;
+    height: 10px;
+    border-bottom: 4px #E53941 solid;
+    border-radius: 30% 0 90% 30%;
+    transform: rotate(25deg);
+    -ms-transform: rotate(25deg);
+    -moz-transform: rotate(25deg);
+    -webkit-transform: rotate(25deg);
+    -o-transform: rotate(25deg);
+    margin-left: 8px;
+}
+
+.beard-left > div:nth-child(4) {
+    margin-top: 20px;
+    width: 26px;
+    height: 20px;
+    border-bottom: 4px #E53941 solid;
+    border-radius: 30% 0 90% 30%;
+    transform: rotate(30deg);
+    -ms-transform: rotate(30deg);
+    -moz-transform: rotate(30deg);
+    -webkit-transform: rotate(30deg);
+    -o-transform: rotate(30deg);
+    margin-left: 28px;
+}
+
+.beard-left > div:last-child {
+    width: 22px;
+    height: 10px;
+    border-bottom: 3px #E53941 solid;
+    border-radius: 0 0 50% 50%;
+    transform: rotate(-15deg);
+    -ms-transform: rotate(-15deg);
+    -moz-transform: rotate(-15deg);
+    -webkit-transform: rotate(-15deg);
+    -o-transform: rotate(-15deg);
+    margin-left: 40px;
+    margin-top: -8px;
+}
+
+.beard-right {
+    float: right;
+    transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    margin-top: -85px;
+}
+
+.beard-right > div:first-child {
+    width: 30px;
+    height: 10px;
+    border-top: 6px #E53941 solid;
+    border-radius: 30% 80% 20% 50%;
+    transform: rotate(25deg);
+    -ms-transform: rotate(25deg);
+    -moz-transform: rotate(25deg);
+    -webkit-transform: rotate(25deg);
+    -o-transform: rotate(25deg);
+    margin-left: 20px;
+}
+
+.beard-right > div:nth-child(2) {
+    width: 20px;
+    height: 6px;
+    background-color: #E53941;
+    border-radius: 50% 50% 50% 50%;
+    transform: rotate(25deg);
+    -ms-transform: rotate(25deg);
+    -moz-transform: rotate(25deg);
+    -webkit-transform: rotate(25deg);
+    -o-transform: rotate(25deg);
+    margin-left: 20px;
+}
+
+.beard-right > div:nth-child(3) {
+    width: 32px;
+    height: 10px;
+    border-bottom: 4px #E53941 solid;
+    border-radius: 30% 0% 90% 30%;
+    transform: rotate(25deg);
+    -ms-transform: rotate(25deg);
+    -moz-transform: rotate(25deg);
+    -webkit-transform: rotate(25deg);
+    -o-transform: rotate(25deg);
+    margin-left: 8px;
+}
+.beard-right > div:nth-child(4) {
+    margin-top: 20px;
+    width: 26px;
+    height: 20px;
+    border-bottom: 4px #E53941 solid;
+    border-radius: 30% 0% 90% 30%;
+    transform: rotate(30deg);
+    -ms-transform: rotate(30deg);
+    -moz-transform: rotate(30deg);
+    -webkit-transform: rotate(30deg);
+    -o-transform: rotate(30deg);
+    margin-left: 28px;
+}
+.beard-right > div:last-child {
+    width: 22px;
+    height: 10px;
+    border-bottom: 3px #E53941 solid;
+    border-radius: 0% 0% 50% 50%;
+    transform: rotate(-15deg);
+    -ms-transform: rotate(-15deg);
+    -moz-transform: rotate(-15deg);
+    -webkit-transform: rotate(-15deg);
+    -o-transform: rotate(-15deg);
+    margin-left: 40px;
+    margin-top: -8px;
 }
 
 /*鼻子*/
-.nose{
+.nose {
     width: 30px;
     height: 36px;
     position: absolute;
@@ -151,7 +307,8 @@ body{
     transform: translateX(-50%);
     top: 250px;
 }
-.nose::before{
+
+.nose::before {
     content: '';
     position: absolute;
     width: 30px;
@@ -162,16 +319,16 @@ body{
 }
 
 /*嘴巴*/
-.mouth{
+.mouth {
     width: 200px;
     height: 36px;
     position: absolute;
-    top:250px;
-    left:50%;
+    top: 250px;
+    left: 50%;
     transform: translateX(-50%);
-    /*overflow: hidden;*/
 }
-.mouth-container{
+
+.mouth-container {
     width: 100px;
     height: 100%;
     position: absolute;
@@ -181,7 +338,8 @@ body{
     overflow: hidden;
 
 }
-.mouth-container span:first-child{
+
+.mouth-container span:first-child {
     display: inline-block;
     width: 4px;
     height: 8px;
@@ -190,21 +348,22 @@ body{
     left: 50%;
     transform: translateX(-50%);
 }
-.mouth-container span:nth-child(2){
+
+.mouth-container span:nth-child(2) {
     width: 50px;
     height: 40px;
     display: inline-block;
     position: absolute;
-    left:0;
+    left: 0;
     border-right: 4px solid #2e2e2e;
     border-bottom: 4px solid #2e2e2e;
     border-radius: 0 40% 50% 20%;
 
-
     margin-top: -18px;
     margin-left: -1px;
 }
-.mouth-container span:nth-child(3){
+
+.mouth-container span:nth-child(3) {
     width: 50px;
     height: 40px;
     display: inline-block;
@@ -212,9 +371,77 @@ body{
     right: 0;
     border-bottom: 4px solid #2e2e2e;
     border-left: 4px solid #2e2e2e;
-    border-radius:  40% 0 20% 50%;
+    border-radius: 40% 0 20% 50%;
 
     margin-top: -18px;
     margin-right: -1px;
     transition: border-radius 1s;
 }
+
+/*红眼圈*/
+.eye-red {
+    position: absolute;
+    height: 28px;
+    width: 70px;
+    background: red;
+    top: 34px;
+    left: 18px;
+    border-radius: 50% 50% 50% 50%;
+    background-image: -moz-radial-gradient( 50% 50%, rgba(253,214,240,0.8) 0%, rgba(253,224,244,0.8) 66%, rgba(253,234,247,0.8) 100%);
+    background-image: -webkit-radial-gradient( 50% 50%, rgba(253,214,240,0.8) 0%, rgba(253,224,244,0.8) 66%, rgba(253,234,247,0.8) 100%);
+    background-image: -ms-radial-gradient( 50% 50%, rgba(253,214,240,0.8) 0%, rgba(253,224,244,0.8) 66%, rgba(253,234,247,0.8) 100%);
+    opacity: 0.0;
+}
+
+/*眼睛浮动*/
+.cat:hover .eye-socket > div:first-child {
+    width:40px;
+    margin-left: 30px;
+
+}
+.cat:hover .eyeliner {
+    margin-top: -75px;
+}
+
+.cat:hover .eye-red {
+    opacity: 0.8;
+    transition: opacity 0.5s ease-in 0.2s;
+}
+
+/*嘴巴浮动*/
+.cat:hover .mouth-container > span:nth-child(2) {
+    border-radius: 50% 50% 50% 50%;
+    width: 50px;
+    transition:  border-radius  1s ;
+}
+.cat:hover .mouth-container > span:nth-child(3) {
+    width: 50px;
+    margin-left: -30px;
+    border-radius: 50% 50% 50% 50%;
+    transition:  border-radius  1s;
+}
+
+/*鼠标浮动耳朵样式*/
+.cat:hover .ear:before {
+    left: -10px;
+    transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    border-radius: 4% 80% 0% 60%;
+}
+
+.cat:hover .ear:after {
+    right: -10px;
+    transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    border-radius: 80% 4% 60% 0;
+}
+
+
+
+
